--- a/styles/index.css
+++ b/styles/index.css
@@ -8,6 +8,44 @@
   body {
     font-family: "Inter", sans-serif;
   }
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-height: thin;
+    scrollbar-color: #151111 #DFE9EB;
+  }
+
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    width: 4px;
+    width: 4px;
+    height: 7px;
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: #DFE9EB;
+  }
+
+  *::-webkit-scrollbar-track:hover {
+    background-color: #B8C0C2;
+  }
+
+  *::-webkit-scrollbar-track:active {
+    background-color: #B8C0C2;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #151111;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #151111;
+  }
+
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #151111;
+  }
 }
 
 @layer components {
